--- a/app/views/auth/_partials/service_request_leaderboard.html
+++ b/app/views/auth/_partials/service_request_leaderboard.html
@@ -11,56 +11,22 @@
     <!-- end header -->
     <div class="row m-t-lg">
         <ul class="list inset m-a-0">
-            <li class="list-item">
-                <a href="#" class="list-left">
-                <span class="w-40 circle accent avatar">
-                    <span>C</span>
-                </span>
-              </a>
+            <li ng-if="leader.party" ng-repeat="leader in performances.leaderboard" class="list-item">
+                <a href class="list-left">
+                    <!-- TODO switch between actual image and letter avatar Use base64 uploader -->
+                    <letter-avatar title="{{leader.party.name}}" data="{{leader.party.name}}" height="40" width="40" shape="round" fontSize="15">
+                    </letter-avatar>
+                </a>
                 <div class="list-body">
                     <div>
-                        <a href="#">Chris Fox</a>
-                        <span class="pull-right text-muted">12,000</span>
+                        <a href>{{leader.party.name}}</a>
+                        <span class="pull-right text-muted">{{leader.count | number:0}}</span>
                     </div>
-                    <small class="text-muted text-ellipsis">Designer, Blogger</small>
-                </div>
-            </li>
-            <li class="list-item">
-                <a href="#" class="list-left">
-                <span class="w-40 circle purple avatar">
-                  <span>J</span>
-                </span>
-              </a>
-                <div class="list-body">
-                    <div>
-                        <a href="#">Joge Lucky</a>
-                    </div>
-                    <small class="text-muted text-ellipsis">Art director, Movie Cut</small>
-                </div>
-            </li>
-            <li class="list-item">
-                <a href="#" class="list-left">
-                <span class="w-40 circle danger avatar">
-                  <span>F</span>
-                </span>
-              </a>
-                <div class="list-body">
-                    <div>
-                        <a href="#">Folisise Chosielie</a>
-                    </div>
-                    <small class="text-muted text-ellipsis">Musician, Player</small>
-                </div>
-            </li>
-            <li class="list-item"><a href="#" class="list-left">
-              <span class="w-40 circle warning avatar">
-                <span>P</span>
-              </span>
-            </a>
-                <div class="list-body">
-                    <div>
-                        <a href="#">Peter</a>
-                    </div>
-                    <small class="text-muted text-ellipsis">Musician, Player</small>
+                    <small class="text-muted text-ellipsis">
+                        {{leader.party.relation.name ? leader.party.relation.name :'N/A'}}
+                        / {{leader.party.relation.workspace ? leader.party.relation.workspace : 'N/A' }}
+                        <span class="pull-right label info" title="#{{$index+1}}">&nbsp;&nbsp;{{$index + 1}}&nbsp;&nbsp;</span>
+                    </small>
                 </div>
             </li>
         </ul>
