--- a/app/views/auth/_partials/service_request_pipelines.html
+++ b/app/views/auth/_partials/service_request_pipelines.html
@@ -25,6 +25,21 @@
                 </div>
             </div>
         </div>
+        <div class="col-xs-6 col-sm-2" title="Late Service Requests">
+            <div class="padding">
+                <div class="p-t-md">
+                    <span class="pull-right">
+                    <i class="fa fa-circle text-primary m-y-xs" style="color: #01a72b !important"></i>
+                  </span>
+                </div>
+                <div class="text-center">
+                    <h2 class="text-center text-3x" title="200">
+                        200
+                    </h2>
+                    <p class="text-muted m-b-md">Late</p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- TODO resolved pipeline -->
     <!-- TODO late pipeline -->
