Add card separation for clear view

--- a/app/views/auth/_partials/service_request_counts.html
+++ b/app/views/auth/_partials/service_request_counts.html
@@ -11,7 +11,7 @@
     <!-- end header -->
     <div class="row m-t-lg">
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box p-a">
+            <div class="box p-a box-shadow-z2">
                 <div class="box-header">
                     <h2>Today</h2>
                     <small>{{performances.works.day.startedAt | date: settings.dateFormat}}</small>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 offset-lg-1">
-            <div class="box p-a">
+            <div class="box p-a box-shadow-z2">
                 <div class="box-header">
                     <h2>This Week</h2>
                     <small>{{performances.works.week.startedAt | date: settings.dateFormat}} -
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 offset-lg-1">
-            <div class="box p-a">
+            <div class="box p-a box-shadow-z2">
                 <div class="box-header">
                     <h2>This Month</h2>
                     <small>
