--- a/app/views/auth/_partials/service_request_durations.html
+++ b/app/views/auth/_partials/service_request_durations.html
@@ -11,7 +11,7 @@
     <!-- end header -->
     <div class="row m-t-lg">
         <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="box p-a">
+            <div class="box p-a box-shadow-z2">
                 <div class="box-header">
                     <h2>Today</h2>
                     <small>{{performances.durations.day.startedAt | date: settings.dateFormat}}</small>
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="box p-a">
+            <div class="box p-a box-shadow-z2">
                 <div class="box-header">
                     <h2>This Week</h2>
                     <small>
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="box p-a">
+            <div class="box p-a box-shadow-z2">
                 <div class="box-header">
                     <h2>This Month</h2>
                     <small>
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3">
-            <div class="box p-a">
+            <div class="box p-a box-shadow-z2">
                 <div class="box-header">
                     <h2>Average Call Duration</h2>
                     <small>
