--- a/app/views/auth/_partials/service_request_pipelines.html
+++ b/app/views/auth/_partials/service_request_pipelines.html
@@ -1,42 +1,26 @@
 <!-- start service request pipeline -->
-<div class="p-a-lg p-t-0">
+<div>
     <!-- start header -->
-    <div>
+    <!-- <div>
         <h4 title="Response Pipeline">Response Pipeline</h4>
         <small class="block text-muted" title="Overall Number of Service Requests Per Status">
           Overall Number of Service Requests Per Status
       </small>
-    </div>
+    </div> -->
     <!-- end header -->
     <!-- start displaying pipeline -->
-    <div class="row m-t-lg">
-        <div ng-repeat="pipeline in performances.pipelines" ng-class="{'b-l':$first}" class="col-xs-6 col-sm-2 b-t b-r b-b" title="{{pipeline.label.name}} Service Requests">
-            <div class="padding">
+    <div class="row">
+        <div ng-repeat="pipeline in performances.pipelines" class="col-xs-6 col-sm-2" style="background-color:{{pipeline.displayColor}};color:#fff;" title="{{pipeline.label.name}} Service Requests">
+            <div class="">
                 <div class="p-t-md">
                     <span class="pull-right">
-                      <i class="fa fa-circle text-primary m-y-xs" style="color: {{pipeline.displayColor}}"></i>
                     </span>
                 </div>
                 <div class="text-center">
-                    <h2 class="text-center text-3x" title="{{pipeline.count | number:0}}">
+                    <h2 class="text-center text-2x" title="{{pipeline.count | number:0}}">
                         {{pipeline.count | numeraljs:'0a'}}
                     </h2>
-                    <p class="text-muted m-b-md">{{pipeline.label.name}}</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-6 col-sm-2 b-a b-l-0" title="Late Service Requests">
-            <div class="padding">
-                <div class="p-t-md">
-                    <span class="pull-right">
-                    <i class="fa fa-circle text-primary m-y-xs" style="color: #01a72b !important"></i>
-                  </span>
-                </div>
-                <div class="text-center">
-                    <h2 class="text-center text-3x" title="200">
-                        200
-                    </h2>
-                    <p class="text-muted m-b-md">Late</p>
+                    <p class="m-b-md text-sm">{{pipeline.label.name}}</p>
                 </div>
             </div>
         </div>
