--- a/app/views/auth/profile.html
+++ b/app/views/auth/profile.html
@@ -11,18 +11,9 @@
 <!-- end profile header -->
 <!-- start app body -->
 <div class="app-body">
-    <!-- start profile summary  -->
+    <!-- start profile summary and service request pipelines -->
     <ng-include src="'views/auth/_partials/profile_summary.html'"></ng-include>
-    <!-- end profile summary -->
-    <!-- start service request pipelines -->
-    <!-- <ng-include ng-if="performances.pipelines" src="'views/auth/_partials/service_request_pipelines.1.html'"></ng-include>
-
-    <ng-include ng-if="performances.pipelines" src="'views/auth/_partials/service_request_pipelines.2.html'"></ng-include>
-
-    <ng-include ng-if="performances.pipelines" src="'views/auth/_partials/service_request_pipelines.3.html'"></ng-include> -->
-
-    <ng-include ng-if="performances.pipelines" src="'views/auth/_partials/service_request_pipelines.html'"></ng-include>
-    <!-- end service request pipelines -->
+    <!-- end profile summary and service request pipelines -->
     <!-- start service request counts -->
     <ng-include ng-if="performances.works" src="'views/auth/_partials/service_request_counts.html'"></ng-include>
     <!-- end service request counts -->
