add first iteration for supervisor performance dashboard

--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -33,6 +33,14 @@
           </a>
                 </li>
                 <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
+                    <a ui-sref="app.performances" title="Performances">
+                      <span class="nav-icon">
+                        <i class="ion-ios-speedometer"></i>
+                      </span>
+                      <span class="nav-text">Area Performances</span>
+                    </a>
+                </li>
+                <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
                     <a ui-sref="app.overviews" title="Overviews">
               <span class="nav-icon">
                   <i class="ion-pie-graph"></i>
