prevent same status change

--- a/app/views/servicerequests/_partials/comments.html
+++ b/app/views/servicerequests/_partials/comments.html
@@ -39,6 +39,9 @@
                     <p ng-if="comment.assignee && comment.assignee.name">
                      Assignee to {{comment.assignee.name}}
                     </p>
+                    <!-- TODO show resolved changelog -->
+                    <!-- TODO show re-open changelog -->
+                    <!-- TODO show attachment changelog -->
                 </div>
             </div>
         </div>
