Rearrange aside menu

--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -32,21 +32,15 @@
               <span class="nav-text">New Issue</span>
           </a>
                 </li>
-                <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
-                    <a ui-sref="app.performances" title="Performances">
-                      <span class="nav-icon">
-                        <i class="ion-ios-speedometer"></i>
-                      </span>
-                      <span class="nav-text">Area Performances</span>
-                    </a>
-                </li>
+
+
                 <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
                     <a ui-sref="app.overviews" title="Overviews">
               <span class="nav-icon">
                   <i class="ion-pie-graph"></i>
               </span>
-              <span class="nav-text">Overviews</span>
-          </a>
+                <span class="nav-text">Overviews</span>
+              </a>
                 </li>
                 <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
                     <a ui-sref="app.standings" title="Standings">
@@ -55,6 +49,22 @@
               </span>
               <span class="nav-text">Standings</span>
           </a>
+                </li>
+                <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
+                    <a ui-sref="app.performances" title="Performances">
+                    <span class="nav-icon">
+                      <i class="ion-ios-speedometer"></i>
+                    </span>
+                    <span class="nav-text">Area Performances</span>
+                  </a>
+                </li>
+                <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
+                    <a ui-sref="app.comparison" title="Comparison">
+                  <span class="nav-icon">
+                    <i class="ion-stats-bars"></i>
+                  </span>
+                  <span class="nav-text">Comparison</span>
+                </a>
                 </li>
                 <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
                     <a ui-sref="app.exports" title="Exports">
