--- a/app/views/dashboards/_partials/service_request_groups.html
+++ b/app/views/dashboards/_partials/service_request_groups.html
@@ -2,7 +2,7 @@
 <div>
     <!-- start displaying group -->
     <div class="row">
-        <div ng-repeat="group in groups" class="col-xs-6 col-sm-2" style="background-color:{{group.displayColor}};color:#fff;" title="{{group.label.name}} Service Requests">
+        <div ng-repeat="group in performances.groups" class="col-xs-6 col-sm-2" style="background-color:{{group.color}};color:#fff;" title="{{group.label.name}} Service Requests">
             <div class="">
                 <div class="p-t-md">
                     <span class="pull-right">
@@ -12,7 +12,7 @@
                     <h2 class="text-center text-md" title="{{group.count | number:0}}">
                         {{group.count | numeraljs:'0a'}}
                     </h2>
-                    <p class="m-b-md text-sm">{{group.label.name}}</p>
+                    <p class="m-b-md text-sm">{{group.name}}</p>
                 </div>
             </div>
         </div>
