--- a/app/views/dashboards/comparison.html
+++ b/app/views/dashboards/comparison.html
@@ -45,7 +45,7 @@
     <ng-include ng-if="areaPerService" src="'views/dashboards/_partials/area_per_service_leaderboard.html'"></ng-include>
     <!-- end area per service leaderboard -->
     <!-- start service group per status leaderboard -->
-    <ng-include src="'views/dashboards/_partials/service_group_per_status_leaderboard.html'"></ng-include>
+    <ng-include ng-if="serviceGroupPerStatus" src="'views/dashboards/_partials/service_group_per_status_leaderboard.html'"></ng-include>
     <!-- end service group per status leaderboard -->
 </div>
 <!-- end of app body -->
