--- a/app/views/dashboards/performances.html
+++ b/app/views/dashboards/performances.html
@@ -19,7 +19,7 @@
         <div class="row m-b-lg m-t-lg">
             <!-- start count by service group -->
             <div class="col-sm-12 col-md-6 col-lg-6">
-                <ng-include src="'views/dashboards/_partials/service_request_groups.html'"></ng-include>
+                <ng-include src="'views/dashboards/_partials/service_request_summaries.html'"></ng-include>
             </div>
             <!-- end count by service group -->
 
@@ -35,13 +35,13 @@
         <!-- start of leader's board section -->
         <hr>
         <div class="row m-t-lg">
-            <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="col-sm-12 col-md-5 col-lg-5">
                 <!-- start of staff leaderboard -->
                 <ng-include ng-if="performances.operators" src="'views/dashboards/_partials/service_request_leaderboard.html'"/>
 
                 <!-- end of staff leaderboard -->
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="col-sm-12 col-md-5 col-lg-5 offset-md-1">
                 <!-- start of area leaderboard -->
                 <ng-include ng-if="performances.jurisdictions" src="'views/dashboards/_partials/service_request_area_leaderboard.html'"/>
                 <!-- end of area leaderboard -->
